# hcmus-solutions

./: .gitignore  README.md
ai-foundations/: readme.md
computer-network/: readme.md
computer-system/: readme.md
computer-system/Week1/: Report.tex  z.sh
computer-system/Week1/Source/: Ex1.cpp  Ex2.cpp
computer-system/Week2/: Report.tex
computer-system/Week2/Source/: Ex1.cpp  Ex2.cpp  Ex3.cpp  Ex4.cpp
computer-system/Week3/: Report.tex
computer-system/Week3/Source/: Ex1.s  Ex2.s  Ex3.s  Ex4.s  Ex5.s
computer-system/Week3/pages/: title_page.tex
dsa/: readme.md
dsa/Exercise1/: Report.tex  title_page.tex
dsa/Exercise1/texs/: QueueScreenshots.tex  RecursiveQueue.tex  RecursiveStack.tex  StackScreenshots.tex
dsa/Exercise2/: Report.tex
dsa/Exercise2/texs/: HowIImplemented.tex
dsa/mooc/: Report.tex
dsa/mooc/bilbs/: refs.bib
dsa/mooc/texes/: Course1.tex  Course2.tex  Course3.tex  Course4.tex  Course5.tex  Course6.tex  Course7.tex  CourseInfo.tex  title_page.tex
oop/: readme.md
operating-system/: readme.md
operating-system/lab2/23127065-Code/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
operating-system/lab2/23127065-Code/src-tauri/src/: fs_operations.rs  lib.rs  main.rs  partitions.rs
operating-system/lab2/23127065-Code/src-tauri/src/models/: fat_fs.rs  fs.rs  mod.rs  ntfs_fs.rs  partition.rs
operating-system/lab2/23127065-Code/src-tauri/src/utils/: base.rs  list_partitions.rs  mod.rs
operating-system/lab2/23127065-Code/src-tauri/src/utils/data/: mod.rs  parser.rs  reader.rs
programming-techniques/: readme.md
(+161 files in other folders)
